--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,12 +4,14 @@
 
 <header class="usa-site-header" role="banner">
   <div class="usa-disclaimer">
-    <div class="usa-grid">
-      <span class="usa-disclaimer-official">An official website of the United States Government
-        <img alt="US flag signifying that this is a United States Federal Government website" src="{{ '/assets/img/us_flag_small.png' | prepend: site.baseurl }}">
-      </span>
-      <!-- <span class="usa-disclaimer-stage">This site is currently in alpha. <a href="https://18f.gsa.gov/dashboard/stages/#alpha">Learn more.</a></span> -->
+    <div class="usa-disclaimer-official">
+      <img src="{{ '/assets/img/us_flag_40.png' | prepend: site.baseurl }}" alt="U.S. flag">
+      <p>An official website of the United States government</p>
     </div>
+    <p class="usa-disclaimer-stage">
+      This site is currently in alpha.
+      <a href="https://18f.gsa.gov/dashboard/stages/#alpha">Learn more.</a>
+    </p>
   </div>
   <nav class="usa-site-navbar">
     <div class="usa-grid">
