remove header navigation

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -54,7 +54,7 @@ $on-laptop:        800px;
 @import
         "base",
         "buttons",
-        "navbar",
+        "header",
         "sidenav",
         "home",
         "hero",
