--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -1,3 +1,19 @@
-.center-content {
-  text-align: center;
+.product-content h1 {
+	font-size: 16px;
+}
+.product-content h2 {
+	font-size: 18px;
+}
+#product-listings > ul {
+}
+#product-listings > ul > li {
+	list-style-type: none;
+	display: inline;
+	float: left;
+	background-color: lightgray;
+	margin: 5px;
+	width: 46%;
+}
+#product-listings img{
+	max-height: 150px;
 }
