--- a/_includes/javascript.html
+++ b/_includes/javascript.html
@@ -1,4 +1,5 @@
 <script src="{{ '/assets/js/uswds.min.js' | prepend: site.baseurl  }}"></script>
+<script src="{{ '/assets/js/jquery-2.2.0.min.js' | prepend: site.baseurl  }}"></script>
 <script src="{{ '/assets/js/index.js' | prepend: site.baseurl  }}"></script>
 
 <!--
