add margin for 'learn more' button

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -10,6 +10,10 @@
 	margin-left: 1em;
 	margin-right: 1em;
 }
+.product-content a {
+	margin-left: 1em;
+	margin-right: 1em;
+}
 #product-listings > ul > li {
 	list-style-type: none;
 	background-color: #F1F1F1;
