--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -35,7 +35,7 @@
         {% if site.footer.image %}
           <img class="usa-footer-slim-logo-img" src="{{ site.footer.image | prepend: site.baseurl }}" alt="Health and Human Services image">
         {% endif %}
-        <h3 class="usa-footer-slim-logo-heading">Name of Agency</h3>
+        <h3 class="usa-footer-slim-logo-heading">Administration on Children, Youth &amp; Families</h3>
       </div>
     </div>
   </div>
