provide slight margin between end of content and footer

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -52,6 +52,7 @@ $small:            481px;
         "base",
         "buttons",
         "header",
+        "footer",
         "sidenav",
         "home",
         "hero",
