--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -1,8 +1,9 @@
 .product-content h1 {
-	font-size: 16px;
+	font-size: 1.5rem;
+	color: $text-color;
 }
 .product-content h2 {
-	font-size: 18px;
+	font-size: 1.8rem;
 	margin-left: 1em;
 	margin-right: 1em;
 }
@@ -23,7 +24,7 @@
 	width: 46%;
 }
 #product-listings img{
-	max-height: 150px;
+	max-height: 11em;
 }
 @include media-query($small) {
 	#product-listings > ul > li {
