add US Web Design images for icons

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -54,6 +54,7 @@ $small:            481px;
         "header",
         "footer",
         "sidenav",
+        "facets",
         "home",
         "hero",
         "iframe",
