add facets column

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,10 +15,10 @@ layout: base
 </section>
 
 <section class="content">
-  <div class="usa-grid">
-    <div class="usa-width-one-third">
-       <p>Hello World</p>
-    </div>
+  <div class="usa-grid-full">
+    <aside class="usa-width-one-third facets">
+       {% include facets.html %}
+    </aside>
 
     <div class="usa-width-two-thirds">
       <section class="product-content">
