--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -57,6 +57,7 @@ $small:            481px;
         "facets",
         "home",
         "hero",
+        "product",
         "iframe",
         "pages",
         "projects"
