--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -7,6 +7,13 @@ h1, h2, h3, h4, h5, h6 {
   color: $headers-color;
 }
 
+a {
+  text-decoration: none;
+}
+a:hover, a:focus {
+  text-decoration: underline;
+}
+
 legend,
 h1, h2, h3, h4, h5, h6 {
   margin-bottom: 20px;
