only move the 'learn more' buttons, not all links

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -11,7 +11,7 @@
 	margin-left: 1em;
 	margin-right: 1em;
 }
-.product-content a {
+.product-learn-more {
 	margin-left: 1em;
 	margin-right: 1em;
 }
