update content references to work with Federalist
Because we have some placeholder images, they can’t use the
site.baseurl. But other dynamically added linked (like in the JS) need
it.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,7 +33,7 @@
     <div class="usa-grid">
       <div class="usa-footer-logo">
         {% if site.footer.image %}
-          <img class="usa-footer-slim-logo-img" src="{{ site.footer.image | prepend: site.baseurl }}" alt="Health and Human Services image">
+          <img class="usa-footer-slim-logo-img" src="site.footer.image" alt="Health and Human Services image">
         {% endif %}
         <h3 class="usa-footer-slim-logo-heading">Administration on Children, Youth &amp; Families</h3>
       </div>
