--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -4,7 +4,7 @@ layout: base
 
 <div class="usa-grid back-navigation">
   <div class="usa-width-one-whole">
-    <a href="/" class="nav-back">&lt; back</a>
+    <a href="{{ '/' | prepend: site.baseurl }}" class="nav-back">&lt; back</a>
   </div>
 </div>
 <main class="usa-grid" id="main">
