--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,5 +13,21 @@
       <a href="https://18f.gsa.gov/dashboard/stages/#alpha">Learn more.</a>
     </p>
   </div>
-
+  {% unless page.no-header %}
+    <div class="usa-navbar site-header-navbar">
+      <button class="usa-menu-btn">Menu</button>
+      <div class="usa-logo site-logo" id="logo">
+        <em class="usa-logo-text">
+          <a href="/" accesskey="1" title="Home" aria-label="Home">Child Welfare Product Hub</a>
+        </em>
+      </div>
+      <ul class="usa-button-list usa-unstyled-list">
+        <li>
+          <a class="usa-button usa-button-outline-inverse" href="/">
+            Submit Your Product
+          </a>
+        </li>
+      </ul>
+    </div>
+  {% endunless %}
 </header>
