--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,7 @@
       <button class="usa-menu-btn">Menu</button>
       <div class="usa-logo site-logo" id="logo">
         <em class="usa-logo-text">
-          <a href="/" accesskey="1" title="Home" aria-label="Home">Child Welfare Product Hub</a>
+          <a href="{{ '/' | prepend: site.baseurl }}" accesskey="1" title="Home" aria-label="Home">Child Welfare Product Hub</a>
         </em>
       </div>
       <ul class="usa-button-list usa-unstyled-list">
