band-aid fix for Web Design Standards bug
18F/web-design-standards/issues/1490

--- a/_sass/_facets.scss
+++ b/_sass/_facets.scss
@@ -20,3 +20,6 @@
 .facets-search button, .facets-search button:hover, .facets-search button:visited, .facets-search button:focus, .facets-search button:active {
 	background-color: $headers-color;
 }
+.facets input[type="checkbox"] {
+	z-index: -1;
+}
