--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@ layout: base
 <section>
   <div id="main" tabindex="-1" class="hero-unit" style="background-image: url('{{ page.hero-image | prepend: site.baseurl }}')">
     <div class="usa-grid">
-      <div class="usa-width-whole hero-content">
+      <div class="usa-width-one-whole hero-content">
         <h1>{{ page.hero-heading}}</h1>
         <h2>{{ page.hero-text }}</h2>
         <a class="usa-button" href="{{ page.hero-button-link | prepend: site.baseurl }}">{{ page.hero-button-text }}</a>
