--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -1,6 +1,8 @@
 .product-content h1 {
 	font-size: 1.5rem;
 	color: $text-color;
+	padding-left: 1.94em;
+	margin-left: 5px;
 }
 .product-content h2 {
 	font-size: 1.8rem;
