--- a/_includes/facets.html
+++ b/_includes/facets.html
@@ -1,40 +1,40 @@
 <section>
-  <h1>Search By Audience:</h1>
+  <h1>Search By User:</h1>
   <fieldset class="usa-fieldset-inputs usa-sans">
 
-  <legend class="usa-sr-only">Audience</legend>
+  <legend class="usa-sr-only">User</legend>
 
   <ul class="usa-unstyled-list">
     <li>
-      <input id="children" type="checkbox" name="audience" value="children">
+      <input id="children" type="checkbox" name="user" value="children">
       <label for="children">Children</label>
     </li>
     <li>
-      <input id="youth" type="checkbox" name="audience" value="youth" checked>
+      <input id="youth" type="checkbox" name="user" value="youth" checked>
       <label for="youth">Youth</label>
     </li>
     <li>
-      <input id="biological-families" type="checkbox" name="audience" value="biological-families">
+      <input id="biological-families" type="checkbox" name="user" value="biological-families">
       <label for="biological-families">Biological Families</label>
     </li>
     <li>
-      <input id="foster-families" type="checkbox" name="audience" value="foster-families">
+      <input id="foster-families" type="checkbox" name="user" value="foster-families">
       <label for="foster-families">Foster Families</label>
     </li>
     <li>
-      <input id="social-workers" type="checkbox" name="audience" value="social-workers">
+      <input id="social-workers" type="checkbox" name="user" value="social-workers">
       <label for="social-workers">Social Workers</label>
     </li>
     <li>
-      <input id="data-analysts" type="checkbox" name="audience" value="data-analysts">
+      <input id="data-analysts" type="checkbox" name="user" value="data-analysts">
       <label for="data-analysts">Data Analysts</label>
     </li>
     <li>
-      <input id="tech-leaders" type="checkbox" name="audience" value="tech-leaders">
+      <input id="tech-leaders" type="checkbox" name="user" value="tech-leaders">
       <label for="tech-leaders">Tech Leaders</label>
     </li>
     <li>
-      <input id="agency-leaders" type="checkbox" name="audience" value="agency-leaders">
+      <input id="agency-leaders" type="checkbox" name="user" value="agency-leaders">
       <label for="agency-leaders">Agency Leaders</label>
     </li>
   </ul>
@@ -48,27 +48,27 @@
 
   <ul class="usa-unstyled-list">
     <li>
-      <input id="aging" type="checkbox" name="audience" value="aging">
+      <input id="aging" type="checkbox" name="category" value="aging">
       <label for="aging">Aging Out</label>
     </li>
     <li>
-      <input id="community" type="checkbox" name="audience" value="community">
+      <input id="community" type="checkbox" name="category" value="community">
       <label for="community">Community Resources</label>
     </li>
     <li>
-      <input id="permanency" type="checkbox" name="audience" value="permanency">
+      <input id="permanency" type="checkbox" name="category" value="permanency">
       <label for="permanency">Permanency</label>
     </li>
     <li>
-      <input id="safety" type="checkbox" name="audience" value="safety">
+      <input id="safety" type="checkbox" name="category" value="safety">
       <label for="safety">Safety</label>
     </li>
     <li>
-      <input id="wellbeing" type="checkbox" name="audience" value="wellbeing">
+      <input id="wellbeing" type="checkbox" name="category" value="wellbeing">
       <label for="wellbeing">Wellbeing</label>
     </li>
     <li>
-      <input id="empowerment" type="checkbox" name="audience" value="empowerment">
+      <input id="empowerment" type="checkbox" name="category" value="empowerment">
       <label for="empowerment">Youth Empowerment</label>
     </li>
   </ul>
