--- a/_includes/facets.html
+++ b/_includes/facets.html
@@ -6,36 +6,36 @@
 
   <ul class="usa-unstyled-list">
     <li>
-      <input id="children" type="checkbox" name="user" value="children">
-      <label for="children">Children</label>
-    </li>
-    <li>
-      <input id="youth" type="checkbox" name="user" value="youth" checked>
-      <label for="youth">Youth</label>
+      <input id="agency-leadership" type="checkbox" name="user" value="agency-leadership">
+      <label for="agency-leadership">Agency Leadership</label>
     </li>
     <li>
       <input id="biological-families" type="checkbox" name="user" value="biological-families">
       <label for="biological-families">Biological Families</label>
     </li>
     <li>
+      <input id="data-analysts" type="checkbox" name="user" value="data-analysts">
+      <label for="data-analysts">Data Analysts</label>
+    </li>
+    <li>
       <input id="foster-families" type="checkbox" name="user" value="foster-families">
       <label for="foster-families">Foster Families</label>
+    </li>
+    <li>
+      <input id="kinship-families" type="checkbox" name="user" value="kinship-families">
+      <label for="kinship-families">Kinship Families</label>
+    </li>
+    <li>
+      <input id="service-providers" type="checkbox" name="user" value="service-providers" checked>
+      <label for="service-providers">Service Providers</label>
     </li>
     <li>
       <input id="social-workers" type="checkbox" name="user" value="social-workers">
       <label for="social-workers">Social Workers</label>
     </li>
     <li>
-      <input id="data-analysts" type="checkbox" name="user" value="data-analysts">
-      <label for="data-analysts">Data Analysts</label>
-    </li>
-    <li>
-      <input id="tech-leaders" type="checkbox" name="user" value="tech-leaders">
-      <label for="tech-leaders">Tech Leaders</label>
-    </li>
-    <li>
-      <input id="agency-leaders" type="checkbox" name="user" value="agency-leaders">
-      <label for="agency-leaders">Agency Leaders</label>
+      <input id="tech-leadership" type="checkbox" name="user" value="tech-leadership">
+      <label for="tech-leadership">Technology Leadership</label>
     </li>
   </ul>
 
@@ -48,10 +48,6 @@
 
   <ul class="usa-unstyled-list">
     <li>
-      <input id="aging" type="checkbox" name="category" value="aging">
-      <label for="aging">Aging Out</label>
-    </li>
-    <li>
       <input id="community" type="checkbox" name="category" value="community">
       <label for="community">Community Resources</label>
     </li>
@@ -62,6 +58,10 @@
     <li>
       <input id="safety" type="checkbox" name="category" value="safety">
       <label for="safety">Safety</label>
+    </li>
+    <li>
+      <input id="transitioning" type="checkbox" name="category" value="transitioning">
+      <label for="transitioning">Transitioning Out</label>
     </li>
     <li>
       <input id="wellbeing" type="checkbox" name="category" value="wellbeing">
