build product submission modal
The modal is derived from vote.usa.gov. The structure of the modal is
in place, but the content is pulled from a sample vote.gov selection.
The modal is subscribed to anything with the js-load-submission class.
For now, this is the ‘submit product’ buttons on the header and the
hero on the homepage.

--- a/_includes/javascript.html
+++ b/_includes/javascript.html
@@ -1,6 +1,7 @@
 <script src="{{ '/assets/js/uswds.min.js' | prepend: site.baseurl  }}"></script>
 <script src="{{ '/assets/js/jquery-2.2.0.min.js' | prepend: site.baseurl  }}"></script>
 <script src="{{ '/assets/js/index.js' | prepend: site.baseurl  }}"></script>
+<script src="{{ '/assets/js/submission.js' | prepend: site.baseurl  }}"></script>
 
 <!--
   analytics for DAP, for more info visit
