--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,7 +23,7 @@
       </div>
       <ul class="usa-button-list usa-unstyled-list">
         <li>
-          <a class="usa-button usa-button-outline-inverse" href="/">
+          <a class="usa-button usa-button-outline-inverse js-load-submission" href="/">
             Submit Your Product
           </a>
         </li>
