--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,7 +8,7 @@ layout: base
       <div class="usa-width-one-whole hero-content">
         <h1>{{ page.hero-heading}}</h1>
         <h2>{{ page.hero-text }}</h2>
-        <a class="usa-button" href="{{ page.hero-button-link | prepend: site.baseurl }}">{{ page.hero-button-text }}</a>
+        <a class="usa-button js-load-submission" href="#">{{ page.hero-button-text }}</a>
       </div>
     </div>
   </div>
