add logo for ACF in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,9 +33,8 @@
     <div class="usa-grid">
       <div class="usa-footer-logo">
         {% if site.footer.image %}
-          <img class="usa-footer-slim-logo-img" src="{{site.footer.image}}" alt="Health and Human Services image">
+          <img class="usa-footer-slim-logo-img" src="{{site.footer.image | prepend: site.baseurl }}" alt="Administration for Children and Families Logo">
         {% endif %}
-        <h3 class="usa-footer-slim-logo-heading">Administration on Children, Youth &amp; Families</h3>
       </div>
     </div>
   </div>
