--- a/_sass/_facets.scss
+++ b/_sass/_facets.scss
@@ -20,6 +20,11 @@
 .facets-search button, .facets-search button:hover, .facets-search button:visited, .facets-search button:focus, .facets-search button:active {
 	background-color: $headers-color;
 }
-.facets input[type="checkbox"] {
-	z-index: -1;
+
+// Fix for USWDS v0.12.1
+[type="checkbox"], [type="radio"] {
+	width: auto;
+}
+[type="checkbox"] + label, [type="radio"] + label {
+	display: inline-block;
 }
