match all checkbox IDs with displayed values
The visible name of the checkboxes, the IDs and titles, and registered
values on product Markdown pages all need to match.

This change also adds a few ID elements to the faceted search HTML so
that the elements can be accessed more easily.

--- a/_includes/facets.html
+++ b/_includes/facets.html
@@ -1,6 +1,6 @@
-<section>
+<section id='facets'>
   <h1>Search By User:</h1>
-  <fieldset class="usa-fieldset-inputs usa-sans">
+  <fieldset class="usa-fieldset-inputs usa-sans" id="facets-users">
 
   <legend class="usa-sr-only">User</legend>
 
@@ -34,22 +34,22 @@
       <label for="social-workers">Social Workers</label>
     </li>
     <li>
-      <input id="tech-leadership" type="checkbox" name="user" value="tech-leadership">
-      <label for="tech-leadership">Technology Leadership</label>
+      <input id="technology-leadership" type="checkbox" name="user" value="technology-leadership">
+      <label for="technology-leadership">Technology Leadership</label>
     </li>
   </ul>
 
   </fieldset>
 
   <h1>Search By Category:</h1>
-  <fieldset class="usa-fieldset-inputs usa-sans">
+  <fieldset class="usa-fieldset-inputs usa-sans" id="facets-categories">
 
   <legend class="usa-sr-only">Category</legend>
 
   <ul class="usa-unstyled-list">
     <li>
-      <input id="community" type="checkbox" name="category" value="community">
-      <label for="community">Community Resources</label>
+      <input id="community-resources" type="checkbox" name="category" value="community-resources">
+      <label for="community-resources">Community Resources</label>
     </li>
     <li>
       <input id="permanency" type="checkbox" name="category" value="permanency">
@@ -60,16 +60,16 @@
       <label for="safety">Safety</label>
     </li>
     <li>
-      <input id="transitioning" type="checkbox" name="category" value="transitioning">
-      <label for="transitioning">Transitioning Out</label>
+      <input id="transitioning-out" type="checkbox" name="category" value="transitioning-out">
+      <label for="transitioning-out">Transitioning Out</label>
     </li>
     <li>
       <input id="wellbeing" type="checkbox" name="category" value="wellbeing">
       <label for="wellbeing">Wellbeing</label>
     </li>
     <li>
-      <input id="empowerment" type="checkbox" name="category" value="empowerment">
-      <label for="empowerment">Youth Empowerment</label>
+      <input id="youth-empowerment" type="checkbox" name="category" value="youth-empowerment">
+      <label for="youth-empowerment">Youth Empowerment</label>
     </li>
   </ul>
 
