remove pre-checked value

--- a/_includes/facets.html
+++ b/_includes/facets.html
@@ -26,7 +26,7 @@
       <label for="kinship-families">Kinship Families</label>
     </li>
     <li>
-      <input id="service-providers" type="checkbox" name="user" value="service-providers" checked>
+      <input id="service-providers" type="checkbox" name="user" value="service-providers">
       <label for="service-providers">Service Providers</label>
     </li>
     <li>
