--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -4,3 +4,9 @@
 .usa-footer-slim-logo-img {
 	max-width: 30rem;
 }
+.hhs-footer-img {
+	max-width: 4rem;
+	vertical-align: middle;
+	float: none;
+	margin-right: 1rem;
+}
