small 'submit' form tweaks

--- a/_includes/submit.html
+++ b/_includes/submit.html
@@ -14,13 +14,13 @@
         <label for="organization-url">Website URL <span class="usa-additional_text">Required</span></label>
         <input id="organization-url" name="organization-url" type="url" required="" aria-required="true">
 
-        <label for="poc-name">Name of POC for questions, collaborations, updates <span class="usa-additional_text">Required</span></label>
+        <label for="poc-name">Name of Point of Contact for questions, collaborations, updates <span class="usa-additional_text">Required</span></label>
         <input id="poc-name" name="poc-name" type="text" required="" aria-required="true">
 
-        <label for="poc-title">Title of POC</label>
+        <label for="poc-title">Title of Point of Contact</label>
         <input id="poc-title" name="poc-title">
 
-        <label for="poc-email">Email of POC <span class="usa-additional_text">Required</span></label>
+        <label for="poc-email">Email of Point of Contact <span class="usa-additional_text">Required</span></label>
         <input id="poc-email" name="poc-email" type="email" required="" aria-required="true">
       </fieldset>
 
