--- a/_includes/facets.html
+++ b/_includes/facets.html
@@ -1,78 +1,40 @@
 <section id='facets'>
+  {% if site.data.facets.users %}
   <h1>Search By User:</h1>
   <fieldset class="usa-fieldset-inputs usa-sans" id="facets-users">
 
   <legend class="usa-sr-only">User</legend>
 
   <ul class="usa-unstyled-list">
+    {% assign users = site.data.facets.users | split:',' %}
+    {% for user in users %} {% assign slug-user = user | downcase | slugify %}
     <li>
-      <input id="agency-leadership" type="checkbox" name="user" value="agency-leadership">
-      <label for="agency-leadership">Agency Leadership</label>
+      <input id="{{slug-user}}" type="checkbox" name="user" value="{{slug-user}}">
+      <label for="{{slug-user}}">{{user}}</label>
     </li>
-    <li>
-      <input id="biological-families" type="checkbox" name="user" value="biological-families">
-      <label for="biological-families">Biological Families</label>
-    </li>
-    <li>
-      <input id="data-analysts" type="checkbox" name="user" value="data-analysts">
-      <label for="data-analysts">Data Analysts</label>
-    </li>
-    <li>
-      <input id="foster-families" type="checkbox" name="user" value="foster-families">
-      <label for="foster-families">Foster Families</label>
-    </li>
-    <li>
-      <input id="kinship-families" type="checkbox" name="user" value="kinship-families">
-      <label for="kinship-families">Kinship Families</label>
-    </li>
-    <li>
-      <input id="service-providers" type="checkbox" name="user" value="service-providers">
-      <label for="service-providers">Service Providers</label>
-    </li>
-    <li>
-      <input id="social-workers" type="checkbox" name="user" value="social-workers">
-      <label for="social-workers">Social Workers</label>
-    </li>
-    <li>
-      <input id="technology-leadership" type="checkbox" name="user" value="technology-leadership">
-      <label for="technology-leadership">Technology Leadership</label>
-    </li>
+    {% endfor %}
   </ul>
 
   </fieldset>
+  {% endif %}
 
+  {% if site.data.facets.categories %}
   <h1>Search By Category:</h1>
   <fieldset class="usa-fieldset-inputs usa-sans" id="facets-categories">
 
   <legend class="usa-sr-only">Category</legend>
 
   <ul class="usa-unstyled-list">
+    {% assign categories = site.data.facets.categories | split:',' %}
+    {% for category in categories %} {% assign slug-category = category | downcase | slugify %}
     <li>
-      <input id="community-resources" type="checkbox" name="category" value="community-resources">
-      <label for="community-resources">Community Resources</label>
+      <input id="{{slug-category}}" type="checkbox" name="category" value="{{slug-category}}">
+      <label for="{{slug-category}}">{{category}}</label>
     </li>
-    <li>
-      <input id="permanency" type="checkbox" name="category" value="permanency">
-      <label for="permanency">Permanency</label>
-    </li>
-    <li>
-      <input id="safety" type="checkbox" name="category" value="safety">
-      <label for="safety">Safety</label>
-    </li>
-    <li>
-      <input id="transitioning-out" type="checkbox" name="category" value="transitioning-out">
-      <label for="transitioning-out">Transitioning Out</label>
-    </li>
-    <li>
-      <input id="wellbeing" type="checkbox" name="category" value="wellbeing">
-      <label for="wellbeing">Wellbeing</label>
-    </li>
-    <li>
-      <input id="youth-empowerment" type="checkbox" name="category" value="youth-empowerment">
-      <label for="youth-empowerment">Youth Empowerment</label>
-    </li>
+    {% endfor %}
   </ul>
 
   </fieldset>
+  {% endif %}
 
 </section>
